--- a/LabSem3/TemplateMail/CreateComplaintMail.html
+++ b/LabSem3/TemplateMail/CreateComplaintMail.html
@@ -98,14 +98,16 @@
         div[style*="margin: 16px 0;"] {
             margin: 0 !important;
         }
+
+
     </style>
 </head>
 
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
     <!-- HIDDEN PREHEADER TEXT -->
-    <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
+    <!--<div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
         We're thrilled to have you here! Get ready to dive into your new account.
-    </div>
+    </div>-->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <!-- LOGO -->
         <tr>
@@ -122,7 +124,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                            <h1 style="font-size: 48px; font-weight: 400; margin: 2;">MEGA Complaint!</h1> <img src="https://ci6.googleusercontent.com/proxy/wEkXV1oIeLPOols7NPQD0DaZ2Nx7Ho7xw1PXAzGWuewWt0_veq0zCv5Efp-YQ4-Agsb6gVmHJ15sMskEI6yo2IbpSt867oOGs7ej9V4VhQBbHPrpJCFHN4mJOBHSBgy65-CW6320ZUYK5ng53Iwxvz7yE5nLooYESeR8xiGZi_ckjFTCXSeD370_QUNB4HfkJ4N52YeeF6kleOUIs9-X2iZTEM57p9Q=s0-d-e1-ft#https://is5-ssl.mzstatic.com/image/thumb/Features116/v4/e2/d6/0f/e2d60fb6-8c4c-4b29-442a-61720ec87345/mza_15421960666566461641.png/240x240bb-90.png" width="125" height="120" style="display: block; border: 0px;" />
+                            <h1 style="font-size: 48px; font-weight: 400; margin: 2;">MEGA Complaint!</h1> <img src="https://res.cloudinary.com/quynv300192/image/upload/v1656597664/22644759_1_wwjxys.jpg" width="125" height="120" style="display: block; border: 0px;" />
                         </td>
                     </tr>
                 </table>
@@ -135,24 +137,15 @@
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">Complaint ID:</strong>
                             <p style="margin: 0;">{{Id}} </p>
+
                         </td>
                     </tr>
-                    <!--<tr>
-        <td bgcolor="#ffffff" align="left">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                <tr>
-                    <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
-                        <table border="0" cellspacing="0" cellpadding="0">
-                            <tr>
-                                <td align="center" style="border-radius: 3px;" bgcolor="#FFA73B"><a href="#" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #FFA73B; display: inline-block;">Confirm Account</a></td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>-->
-                    <!-- COPY -->
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <strong style="margin: 0;">Account Complaint:</strong>
+                            <p style="margin: 0;">{{AccountComplaint}} </p>
+                        </td>
+                    </tr>
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">Title:</strong>
@@ -162,25 +155,17 @@
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">TypeComplaint Name:</strong>
-                            <p style="margin: 0;">{{typeComplaintName}} </p>
+                            <p style="margin: 0;">{{TypeComplaintName}} </p>
                         </td>
                     </tr>
-                    <!--<tr>
-        <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-            <p style="margin: 0;"><a href="#" target="_blank" style="color: #FFA73B;">https://bit.li.utlddssdstueincx</a></p>
-        </td>
-    </tr>-->
+                    
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">Detail:</strong>
                             <p style="margin: 0;">{{Detail}} </p>
                         </td>
                     </tr>
-                    <!--<tr>
-        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-            <p style="margin: 0;">Cheers,<br>BBB Team</p>
-        </td>
-    </tr>-->
+                    
                 </table>
             </td>
         </tr>
