--- a/LabSem3/TemplateMail/CreateComplaintMail.html
+++ b/LabSem3/TemplateMail/CreateComplaintMail.html
@@ -140,6 +140,8 @@
 
                         </td>
                     </tr>
+
+
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">Account Complaint:</strong>
@@ -158,14 +160,21 @@
                             <p style="margin: 0;">{{TypeComplaintName}} </p>
                         </td>
                     </tr>
-                    
+
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <strong style="margin: 0;">Detail:</strong>
                             <p style="margin: 0;">{{Detail}} </p>
                         </td>
                     </tr>
-                    
+
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <strong style="margin: 0;">Status:</strong>
+                            <p style="margin: 0;">{{Status}} </p>
+                        </td>
+                    </tr>
+
                 </table>
             </td>
         </tr>
