--- a/LabSem3/TemplateMail/AssignComplaintMail.html
+++ b/LabSem3/TemplateMail/AssignComplaintMail.html
@@ -187,6 +187,12 @@
                             <p style="margin: 0;">{{Detail}} </p>
                         </td>
                     </tr>
+                    <tr>
+                        <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
+                            <strong style="margin: 0;">Status:</strong>
+                            <p style="margin: 0;">{{Status}} </p>
+                        </td>
+                    </tr>
                     <!--<tr>
         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
             <p style="margin: 0;">Cheers,<br>BBB Team</p>
